@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
left to right direction

class Company {
-Designation
}

class Ship {
-MMSI
-Name
-IMO
-Number of Energy Generators
-Generators' Power Output
-Call sign
-Vessel type
-Length
-Width
-Capacity
-Draft
-FleetManager
-ShipCaptain
-ShipChiefElectricalEngineer
}

class ShipPosition {
-Base Date Time
-Latitude
-Longitude
-Speed over ground SOG
-Course over ground COG
-Heading
-Position
-Transceiver Class
}

class TrafficManager

Company "1" -- "1..*" Ship : Owns >
Ship "1" -- "1" ShipPosition : has >
TrafficManager "1" -- "*" ShipPosition : Controls >

@enduml